# advent_of_code_2019

./: aoc.opam  dune-project  run.bash  start_day.bash  template.ml
day01/: puzzle.ml
day02/: puzzle.cpp  puzzle.ml
day03/: puzzle.ml
day04/: puzzle.ml
day05/: puzzle.ml
day06/: puzzle.ml
day07/: dune  puzzle.ml
day08/: puzzle.ml
intcode/: dune  intcode.ml  intcode.mli
